...
    
    
    func setIsLiked(_ isLiked: Bool) {
        let likeImageName = isLiked ? "likeEnable" : "likeDisable"
        likeButton.setImage(UIImage(named: likeImageName), for: .normal)
        
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }
    
    func configCell(
        with textureURLString: String,
        date: String,
        isLiked: Bool,
...
